Align annotations for return values correctly

--- a/app/assets/stylesheets/frontend.less
+++ b/app/assets/stylesheets/frontend.less
@@ -10,6 +10,9 @@
 		    td:nth-child(3) {
 		            text-align: right;
 		    }
+		    td:nth-child(4) {
+		            text-align: right;
+		    }
 		  }
 		}
 	}
